--- a/base.html
+++ b/base.html
@@ -9,6 +9,7 @@
             @import url(https://fonts.googleapis.com/css2?family=Staatliches&display=swap);
             @import url(https://fonts.googleapis.com/css2?family=Square+Peg&display=swap);
             @import url(https://fonts.googleapis.com/css2?family=Shrikhand&family=Square+Peg&display=swap);
+        
         </style>
     </head>
     <body>
@@ -28,6 +29,15 @@
             </nav>
         </header>
         <main>
+            <div>
+                <h1>skdjlksad</h1>
+            </div>
+            <div class="mover">
+                <a href="#">SÑAKÑLDSA</a>
+            </div>
+            <div>
+                <p>XDDDDD</p>
+            </div>
         </main>
         <footer>
             <nav>
