--- a/nosotros.html
+++ b/nosotros.html
@@ -4,7 +4,7 @@
         <link rel="stylesheet" type="text/css" href="style.css">
         <link rel="icon" href="img/marte.png">
         <meta charset="UTF-8">
-        <title>PAGE | ROBOB</title>
+        <title>NOSOTROS | ROBOB</title>
         <style>
             @import url(https://fonts.googleapis.com/css2?family=Libre+Franklin:wght@100&display=swap);
             @import url(https://fonts.googleapis.com/css2?family=Staatliches&display=swap);
@@ -55,6 +55,22 @@
             .article1-img img {
                 width: 100%;
                 height: auto;
+                filter: blur(2px);
+                animation-name: initial-animation-img-blur;
+                animation-fill-mode: forwards;
+                animation-duration: 5s;
+                animation-timing-function: linear;
+            }
+            @keyframes initial-animation-img-blur {
+                0% {
+                    filter: blur(2px);
+                }
+                100% {
+                    filter: blur(0px);
+                }
+            }
+            header nav ul li a p {
+                font-size: 18px;
             }
         </style>
     </head>
@@ -66,6 +82,7 @@
                     <li><a href="prototipo.html"><p>Prototipo</p><hr></a></li>
                     <li><a href="contexto.html"><p>Contexto</p><hr></a></li>
                     <li><a href="ventas.html"><p>Ventas</p><hr></a></li>
+                    <li><a href="futuro.html"><p>Futuro</p><hr></a></li>
                     <li><a href="nosotros.html"><p>Nosotros</p><hr></a></li>
                 </ul>
             </nav>
@@ -90,7 +107,7 @@
                     </p>
                 </div>
                 <div class="article1-img">
-                    <img src="img/img500.png">
+                    <img src="img/logo-lpa.jpg">
                 </div>
             </article>
 
