--- a/prototipo.html
+++ b/prototipo.html
@@ -163,6 +163,7 @@
                     <li><a href="prototipo.html"><p>Prototipo</p><hr></a></li>
                     <li><a href="contexto.html"><p>Contexto</p><hr></a></li>
                     <li><a href="ventas.html"><p>Ventas</p><hr></a></li>
+                    <li><a href="futuro.html"><p>Futuro</p><hr></a></li>
                     <li><a href="nosotros.html"><p>Nosotros</p><hr></a></li>
                 </ul>
             </nav>
