--- a/ventas.html
+++ b/ventas.html
@@ -4,7 +4,7 @@
         <link rel="stylesheet" type="text/css" href="style.css">
         <link rel="icon" href="img/marte.png">
         <meta charset="UTF-8">
-        <title>PAGE | ROBOB</title>
+        <title>VENTAS | ROBOB</title>
         <style>
             @import url(https://fonts.googleapis.com/css2?family=Libre+Franklin:wght@100&display=swap);
             @import url(https://fonts.googleapis.com/css2?family=Staatliches&display=swap);
@@ -199,6 +199,7 @@
                     <li><a href="prototipo.html"><p>Prototipo</p><hr></a></li>
                     <li><a href="contexto.html"><p>Contexto</p><hr></a></li>
                     <li><a href="ventas.html"><p>Ventas</p><hr></a></li>
+                    <li><a href="futuro.html"><p>Futuro</p><hr></a></li>
                     <li><a href="nosotros.html"><p>Nosotros</p><hr></a></li>
                 </ul>
             </nav>
