--- a/nosotros.html
+++ b/nosotros.html
@@ -107,7 +107,7 @@
                     </p>
                 </div>
                 <div class="article1-img">
-                    <img src="img/logo-lpa.jpg">
+                    <img src="img01.jpg">
                 </div>
             </article>
 
