--- a/index.html
+++ b/index.html
@@ -76,6 +76,13 @@
             .nasa-logo-radius {
                 border-radius: 50%;
             }
+            .aviso {
+                color: white;
+                background-color: black;
+                width: 100%;
+                height: auto;
+                font-family: 'Square Peg', Verdana, Arial, cursive;
+            }
         </style>
     </head>
     <body>
@@ -96,6 +103,9 @@
             </nav>
         </header>
         <main>
+            <div class="aviso">
+                <h1>ESTAMOS TRABAJANDO EN EL APARTADO VISUAL DE LA PÁGINA<br>GRACIAS POR SU COMPRENSIÓN.</h1>
+            </div>
             <div class="banner1">
                 <div class="banner1-title-1"><h1>ROBOB</h1><p>De Renca a Marte</p></div>
                 <div class="banner1-bottom-side">
