--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
         </header>
         <main>
             <div class="aviso">
-                <h1>ESTAMOS TRABAJANDO EN EL APARTADO VISUAL DE LA PÁGINA<br>GRACIAS POR SU COMPRENSIÓN.</h1>
+                <h1>PROYECTO FINALIZADO<br>GRACIAS POR SU APOYO DURANTE ESTE PROCESO.</h1>
             </div>
             <div class="banner1">
                 <div class="banner1-title-1"><h1>ROBOB</h1><p>De Renca a Marte</p></div>
